--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,44 +1,76 @@
 {
-  "docsets_to_publish": [
-    {
-      "docset_name": "learn-bizapps-pr",
-      "build_source_folder": "learn-bizapps-pr",
-      "build_output_subfolder": "learn-bizapps-pr",
-      "locale": "de-DE",
-      "monikers": [],
-      "moniker_ranges": [],
-      "open_to_public_contributors": false,
-      "build_entry_point": "docs",
-      "template_folder": "_themes"
-    }
-  ],
-  "notification_subscribers": [],
-  "sync_notification_subscribers": [],
-  "branches_to_filter": [
-    "live-sxs",
-    "master-sxs"
-  ],
-  "continue_with_document_error": true,
-  "skip_source_output_uploading": false,
-  "need_preview_pull_request": true,
-  "contribution_branch_mappings": {},
-  "dependent_repositories": [
-    {
+    "docsets_to_publish": [
+        {
+            "docset_name": "learn-bizapps-pr",
+            "build_source_folder": "learn-bizapps-pr",
+            "build_output_subfolder": "learn-bizapps-pr",
+            "locale": "de-DE",
+            "monikers": [],
+            "moniker_ranges": [],
+            "open_to_public_contributors": false,
+            "type_mapping": {
+                "Achievements": "Toc",
+                "LearningPath": "Content",
+                "Module": "Content",
+                "ModuleUnit": "Content"
+            },
+            "build_entry_point": "docs",
+            "template_folder": "_themes",
+            "customized_tasks": {
+                "docset_postbuild": [
+                    "_dependentPackages/CommonPlugins/tools/TripleCrownValidation.ps1"
+                ]
+            }
+        }
+    ],
+    "notification_subscribers": [],
+    "sync_notification_subscribers": [],
+    "branches_to_filter": [],
+    "git_repository_url_open_to_public_contributors": "https://github.com/MicrosoftDocs/learn-bizapps",
+    "git_repository_branch_open_to_public_contributors": "master",
+    "skip_source_output_uploading": false,
+    "need_preview_pull_request": true,
+    "contribution_branch_mappings": {},
+    "dependent_repositories": [
+      {
+
       "path_to_root": "_themes",
+
       "url": "https://github.com/Microsoft/templates.docs.msft.de-DE",
+
       "branch": "master",
+
       "branch_mapping": {}
+
     },
+
     {
+
       "path_to_root": "_repo.en-us",
+
       "url": "https://github.com/MicrosoftDocs/learn-bizapps-pr",
+
       "branch": "live",
+
       "branch_mapping": {
+
         "live": "live",
+
         "master": "master"
+
       }
+
     }
-  ],
-  "branch_target_mapping": {},
-  "need_generate_pdf_url_template": false
+    ],
+    "dependent_packages": [
+        {
+            "id": "Microsoft.OpenPublishing.CommonPlugins",
+            "nuget_feed": "https://www.myget.org/F/op/api/v2",
+            "path_to_root": "_dependentPackages/CommonPlugins",
+            "target_framework": "net45",
+            "version": "latest"
+        }
+    ],
+    "branch_target_mapping": {},
+    "need_generate_pdf_url_template": false
 }
