fixing product values

--- a/learn-bizapps-pr/flow/flow-get-started/index.yml
+++ b/learn-bizapps-pr/flow/flow-get-started/index.yml
@@ -20,8 +20,8 @@ levels:
 roles:
 - business-user
 products:
-- Flow
-- d365
+- bizapps-flow
+- bizapps-d365
 units:
 - learn-bizapps.flow-get-started.1-flow-introduction
 - learn-bizapps.flow-get-started.2-flow-create-first
