--- a/learn-bizapps-pr/powerapps/powerapp-business-process-flow/index.yml
+++ b/learn-bizapps-pr/powerapps/powerapp-business-process-flow/index.yml
@@ -20,9 +20,9 @@ levels:
 roles:
 - business-user
 products:
-- flow
-- PowerApps
-- d365
+- bizapps-flow
+- bizapps-d365
+- bizapps-power-apps
 units:
 - learn-bizapps.powerapps-business-process-flow.1-introduction
 - learn-bizapps.powerapps-business-process-flow.2-create-a-business-flow-app
