--- a/learn-bizapps-pr/powerapps/powerapp-design-model-driven-apps/index.yml
+++ b/learn-bizapps-pr/powerapps/powerapp-design-model-driven-apps/index.yml
@@ -20,8 +20,8 @@ levels:
 roles:
 - business-user
 products:
-- PowerApps
-- d365
+- bizapps-d365
+- bizapps-power-apps
 units:
 - learn-bizapps.powerapps-design-model-driven-apps.1-introduction
 - learn-bizapps.powerapps-design-model-driven-apps.2-building-blocks-of-model-driven-apps
