--- a/learn-bizapps-pr/flow/flow-approvals/index.yml
+++ b/learn-bizapps-pr/flow/flow-approvals/index.yml
@@ -20,8 +20,8 @@ levels:
 roles:
 - business-user
 products:
-- Flow
-- d365
+- bizapps-flow
+- bizapps-d365
 units:
 - learn-bizapps.flow-create-approval.1-create-approval-request
 - learn-bizapps.flow-create-approval.2-process-approval-request
