--- a/learn-bizapps-pr/powerapps/powerapp-common-data-service/index.yml
+++ b/learn-bizapps-pr/powerapps/powerapp-common-data-service/index.yml
@@ -20,9 +20,9 @@ levels:
 roles:
 - business-user
 products:
-- flow
-- PowerApps
-- d365
+- bizapps-flow
+- bizapps-d365
+- bizapps-power-apps
 units:
 - learn-bizapps.powerapps-common-data-service.1-introduction
 - learn-bizapps.powerapps-common-data-service.2-learn-about-entities
