--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -26,7 +26,7 @@
     "notification_subscribers": [],
     "sync_notification_subscribers": [],
     "branches_to_filter": [],
-    "git_repository_url_open_to_public_contributors": "https://github.com/MicrosoftDocs/learn-bizapps",
+    "git_repository_url_open_to_public_contributors": "https://github.com/MicrosoftDocs/learn-bizapps.de-DE",
     "git_repository_branch_open_to_public_contributors": "master",
     "skip_source_output_uploading": false,
     "need_preview_pull_request": true,
