--- a/learn-bizapps-pr/paths/create-powerapps/index.yml
+++ b/learn-bizapps-pr/paths/create-powerapps/index.yml
@@ -9,17 +9,17 @@ levels:
 roles:
 - business-user
 products:
-- PowerApps
+- bizapps-power-apps
 prerequisites: In diesem Lernpfad wird vorausgesetzt, dass Sie sich mit OneDrive, SharePoint und Excel auskennen.
 metadata:
   title: Erstellen einer App in PowerApps
   description: In diesem Lernpfad erhalten Sie eine Einführung in PowerApps und Unterstützung beim Erstellen und Anpassen einer App und erfahren, wie Sie erstellte Apps verwalten und verteilen können.
-  ms.openlocfilehash: 581a84e6209420c9a569c38e9b628baa9a5e5a6a
-  ms.sourcegitcommit: 11f38bf857b2bb8bb6adb06a6ba0154e98bf24b3
+  ms.openlocfilehash: e810d3f3e316dbc056336822fc9657e066d1958d
+  ms.sourcegitcommit: d2e8b297a840d5958013d9a61963ce41c6b4ed22
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 08/29/2018
-  ms.locfileid: "43239663"
+  ms.lasthandoff: 09/06/2018
+  ms.locfileid: "43848221"
 modules:
 - learn-bizapps.powerapps-get-started
 - learn-bizapps.powerapps-customize
