--- a/learn-bizapps-pr/powerapps/powerapps-customize/index.yml
+++ b/learn-bizapps-pr/powerapps/powerapps-customize/index.yml
@@ -4,12 +4,12 @@ metadata:
   title: Anpassen einer App
   description: Finden Sie heraus, wie Sie eine App anpassen, indem Sie Steuerelemente, Bilder und Logik hinzufügen.
   ms.date: 09/24/2018
-  ms.openlocfilehash: 6dc057cec6f6c1a5706a45e30fd62d1a68a9625c
-  ms.sourcegitcommit: 609626c2526eb275d1789eb2a081ff543d89e967
+  ms.openlocfilehash: 3e02066950ca5e0ff39b96c4b1bc53d8afca9db5
+  ms.sourcegitcommit: d2e8b297a840d5958013d9a61963ce41c6b4ed22
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 08/29/2018
-  ms.locfileid: "43192652"
+  ms.lasthandoff: 09/06/2018
+  ms.locfileid: "43848336"
 title: Anpassen einer App
 summary: Finden Sie heraus, wie Sie eine App anpassen, indem Sie Steuerelemente, Bilder und Logik hinzufügen.
 abstract: >
@@ -37,8 +37,8 @@ levels:
 roles:
 - business-user
 products:
-- PowerApps
-- d365
+- bizapps-d365
+- bizapps-power-apps
 units:
 - learn-bizapps.powerapps-customize.1-powerapps-customize
 - learn-bizapps.powerapps-customize.2-powerapps-explore
