--- a/learn-bizapps-pr/power-bi/get-started-with-power-bi/index.yml
+++ b/learn-bizapps-pr/power-bi/get-started-with-power-bi/index.yml
@@ -2,28 +2,22 @@
 uid: learn.get-started-with-power-bi
 metadata:
   title: Erste Schritte mit Power BI
-  description: Power BI ist eine Sammlung aus Softwarediensten und Anwendungen, mit denen Sie eine Verbindung zu den unterschiedlichsten Datenquellen herstellen und überzeugende Visuals und Berichte erstellen können. Sie können durch das Abrufen dieser Berichte oder das Freigeben mit anderen Personen in oder außerhalb Ihrer Organisation profitieren. Lernen Sie die Grundlagen von Power BI, erfahren Sie, welche Power BI-Dienste und -Anwendungen zusammenarbeiten und wie diese zum Erstellen oder Nutzen überzeugender Visuals und Analysen basierend auf Ihren Daten verwendet werden können.
-  ms.openlocfilehash: 82e9792c672b930e73e276d899becd90a3329c54
-  ms.sourcegitcommit: d2e8b297a840d5958013d9a61963ce41c6b4ed22
-  ms.translationtype: HT
-  ms.contentlocale: de-DE
-  ms.lasthandoff: 09/06/2018
-  ms.locfileid: "43848244"
+  description: 'Power BI ist eine Sammlung aus Softwarediensten und Anwendungen, mit denen Sie eine Verbindung zu den unterschiedlichsten Datenquellen herstellen und überzeugende Visuals und Berichte erstellen können. Sie können durch das Abrufen dieser Berichte oder das Freigeben mit anderen Personen in oder außerhalb Ihrer Organisation profitieren. Lernen Sie die Grundlagen von Power BI, erfahren Sie, welche Power BI-Dienste und -Anwendungen zusammenarbeiten und wie diese zum Erstellen oder Nutzen überzeugender Visuals und Analysen basierend auf Ihren Daten verwendet werden können.'
 title: Erste Schritte mit Power BI
-summary: Erfahren Sie, was Power BI ist, einschließlich der dazugehörigen Bausteine und wie diese zusammen funktionieren.
-abstract: Power BI ist eine Sammlung aus Softwarediensten und Anwendungen, mit denen Sie eine Verbindung zu den unterschiedlichsten Datenquellen herstellen und überzeugende Visuals und Berichte erstellen können. Sie können durch das Abrufen dieser Berichte oder das Freigeben mit anderen Personen in oder außerhalb Ihrer Organisation profitieren. Lernen Sie die Grundlagen von Power BI, erfahren Sie, welche Power BI-Dienste und -Anwendungen zusammenarbeiten und wie diese zum Erstellen oder Nutzen überzeugender Visuals und Analysen basierend auf Ihren Daten verwendet werden können.
-cardDescription: Erfahren Sie, was Power BI ist, einschließlich der dazugehörigen Bausteine und wie diese zusammen funktionieren.
-iconUrl: http://via.placeholder.com/120x120
+summary: 'Erfahren Sie, was Power BI ist, einschließlich der dazugehörigen Bausteine und wie diese zusammen funktionieren.'
+abstract: 'Power BI ist eine Sammlung aus Softwarediensten und Anwendungen, mit denen Sie eine Verbindung zu den unterschiedlichsten Datenquellen herstellen und überzeugende Visuals und Berichte erstellen können. Sie können durch das Abrufen dieser Berichte oder das Freigeben mit anderen Personen in oder außerhalb Ihrer Organisation profitieren. Lernen Sie die Grundlagen von Power BI, erfahren Sie, welche Power BI-Dienste und -Anwendungen zusammenarbeiten und wie diese zum Erstellen oder Nutzen überzeugender Visuals und Analysen basierend auf Ihren Daten verwendet werden können.'
+cardDescription: 'Erfahren Sie, was Power BI ist, einschließlich der dazugehörigen Bausteine und wie diese zusammen funktionieren.'
+iconUrl: 'http://via.placeholder.com/120x120'
 levels:
-- intermediate
+  - intermediate
 roles:
-- business-analyst
+  - business-analyst
 products:
-- bizapps
+  - bizapps
 units:
-- learn.get-started-with-power-bi.1-introduction
-- learn.get-started-with-power-bi.2-using-power-bi
-- learn.get-started-with-power-bi.3-building-blocks-of-power-bi
-- learn.get-started-with-power-bi.4-exercise-touring-and-using-power-bi
-- learn.get-started-with-power-bi.5-summary-cleanup
+  - learn.get-started-with-power-bi.1-introduction
+  - learn.get-started-with-power-bi.2-using-power-bi
+  - learn.get-started-with-power-bi.3-building-blocks-of-power-bi
+  - learn.get-started-with-power-bi.4-exercise-touring-and-using-power-bi
+  - learn.get-started-with-power-bi.5-summary-cleanup
 achievement: learn.get-started-with-power-bi.badge
