--- a/learn-bizapps-pr/powerapps/powerapps-customize/index.yml
+++ b/learn-bizapps-pr/powerapps/powerapps-customize/index.yml
@@ -1,47 +1,33 @@
-### YamlMime:Module
+### YamlMime:Module 
 uid: learn-bizapps.powerapps-customize
 metadata:
   title: Anpassen einer App
-  description: Finden Sie heraus, wie Sie eine App anpassen, indem Sie Steuerelemente, Bilder und Logik hinzufügen.
+  description: 'Finden Sie heraus, wie Sie eine App anpassen, indem Sie Steuerelemente, Bilder und Logik hinzufügen.'
   ms.date: 09/24/2018
-  ms.openlocfilehash: 3e02066950ca5e0ff39b96c4b1bc53d8afca9db5
-  ms.sourcegitcommit: d2e8b297a840d5958013d9a61963ce41c6b4ed22
-  ms.translationtype: HT
-  ms.contentlocale: de-DE
-  ms.lasthandoff: 09/06/2018
-  ms.locfileid: "43848336"
 title: Anpassen einer App
-summary: Finden Sie heraus, wie Sie eine App anpassen, indem Sie Steuerelemente, Bilder und Logik hinzufügen.
-abstract: >
+summary: 'Finden Sie heraus, wie Sie eine App anpassen, indem Sie Steuerelemente, Bilder und Logik hinzufügen.'
+abstract: |
   Aufgaben in diesem Modul:
-
   - Ändern Sie das Layout eines Katalogs.
-
   - Ändern Sie die Daten, die von einem Steuerelement angezeigt werden.
-
   - Ändern Sie die Reihenfolge, in der Felder angezeigt werden.
-
   - Ändern Sie das Steuerelement, mit dem ein Benutzer Informationen bereitstellt.
-
   - Erkunden Sie die Steuerelemente jedes Bildschirms einer App.
-
   - Formatieren Sie eine Zahl als Preis.
-
   - Weisen Sie Preisen basierend auf ihren Werten unterschiedliche Farben zu.
-
   - Erkunden Sie Formeln in einer generierten App.
-cardDescription: Finden Sie heraus, wie Sie eine App anpassen, indem Sie Steuerelemente, Bilder und Logik hinzufügen.
-iconUrl: http://via.placeholder.com/120x120
+cardDescription: 'Finden Sie heraus, wie Sie eine App anpassen, indem Sie Steuerelemente, Bilder und Logik hinzufügen.'
+iconUrl: 'http://via.placeholder.com/120x120'
 levels:
-- beginner
+  - beginner
 roles:
-- business-user
+  - business-user
 products:
-- bizapps-d365
-- bizapps-power-apps
+  - bizapps-d365
+  - bizapps-power-apps
 units:
-- learn-bizapps.powerapps-customize.1-powerapps-customize
-- learn-bizapps.powerapps-customize.2-powerapps-explore
-- learn-bizapps.powerapps-customize.3-powerapps-functions
-- learn-bizapps.powerapps-customize.4-quiz-customize-an-app
+  - learn-bizapps.powerapps-customize.1-powerapps-customize
+  - learn-bizapps.powerapps-customize.2-powerapps-explore
+  - learn-bizapps.powerapps-customize.3-powerapps-functions
+  - learn-bizapps.powerapps-customize.4-quiz-customize-an-app
 achievement: learn.powerapps-customize.badge
