commit translated contents

--- a/learn-bizapps-pr/flow/flow-approvals/index.yml
+++ b/learn-bizapps-pr/flow/flow-approvals/index.yml
@@ -1,24 +1,30 @@
-### YamlMime:Module 
+### YamlMime:Module
 uid: learn-bizapps.flow-create-approval
 metadata:
   title: Erstellen eines Genehmigungsflows
   description: Informationen zum Erstellen eines Genehmigungsflows für eine SharePoint-Liste.
   ms.date: 09/24/2018
+  ms.openlocfilehash: e6b306630f8fbcbd1ccbd57e56c9de64030905eb
+  ms.sourcegitcommit: d2e8b297a840d5958013d9a61963ce41c6b4ed22
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/06/2018
+  ms.locfileid: "43848497"
 title: Erstellen eines Genehmigungsflows
 summary: In diesem Modul erfahren Sie grundlegendes zum Erstellen eines Genehmigungsflows.
-abstract: 'In diesem Modul erfahren Sie, wie Sie einen Genehmigungsflow erstellen, der eine SharePoint-Liste verwendet. Sie erfahren, wie Sie eine SharePoint-Liste erstellen, für die Benutzer Twitter-Tweets vorschlagen können, die später genehmigt und veröffentlicht werden können.'
-cardDescription: 'Sie erfahren in diesem Kurs, wie Sie eine Genehmigungsliste für SharePoint erstellen können, die Twitter-Tweets enthält.'
-iconUrl: 'http://via.placeholder.com/120x120'
+abstract: In diesem Modul erfahren Sie, wie Sie einen Genehmigungsflow erstellen, der eine SharePoint-Liste verwendet. Sie erfahren, wie Sie eine SharePoint-Liste erstellen, für die Benutzer Twitter-Tweets vorschlagen können, die später genehmigt und veröffentlicht werden können.
+cardDescription: Sie erfahren in diesem Kurs, wie Sie eine Genehmigungsliste für SharePoint erstellen können, die Twitter-Tweets enthält.
+iconUrl: http://via.placeholder.com/120x120
 levels:
-  - beginner
+- beginner
 roles:
-  - business-user
+- business-user
 products:
-  - bizapps-d365
-  - bizapps-flow
+- bizapps-d365
+- bizapps-flow
 units:
-  - learn-bizapps.flow-create-approval.1-create-approval-request
-  - learn-bizapps.flow-create-approval.2-process-approval-request
-  - learn-bizapps.flow-create-approval.3-flow-review
-  - learn-bizapps.flow-create-approval.4-quiz-flow-approval
+- learn-bizapps.flow-create-approval.1-create-approval-request
+- learn-bizapps.flow-create-approval.2-process-approval-request
+- learn-bizapps.flow-create-approval.3-flow-review
+- learn-bizapps.flow-create-approval.4-quiz-flow-approval
 achievement: learn.flow-create-approval.badge
