--- a/learn-bizapps-pr/paths/sample-path/index.yml
+++ b/learn-bizapps-pr/paths/sample-path/index.yml
@@ -3,17 +3,23 @@ uid: learn-bizapps.sample-path
 title: Beispiellernpfad
 summary: Dies ist die Zusammenfassung des Beispiellernpfads
 cardDescription: Dies ist die Kartenbeschreibung des Beispiellernpfads
-iconUrl: 'http://via.placeholder.com/120x120'
+iconUrl: http://via.placeholder.com/120x120
 levels:
-  - intermediate
+- intermediate
 roles:
-  - developer
+- developer
 products:
-  - azure
+- azure
 prerequisites: Dies ist der Text mit den Voraussetzungen für den Beispiellernpfad
 metadata:
-  title: 'Beispiellernpfad, Seitentitel'
-  description: 'Beispiellernpfad, Seitenbeschreibung'
+  title: Beispiellernpfad, Seitentitel
+  description: Beispiellernpfad, Seitenbeschreibung
+  ms.openlocfilehash: 7413f365e65de0de5d443fa56c21223a08d6a148
+  ms.sourcegitcommit: d2e8b297a840d5958013d9a61963ce41c6b4ed22
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/06/2018
+  ms.locfileid: "43848198"
 modules:
-  - learn.sample-module-power-bi
+- learn.sample-module-power-bi
 achievement: learn-bizapps.sample-path.trophy
