--- a/learn-bizapps-pr/powerapps/powerapps-get-started/index.yml
+++ b/learn-bizapps-pr/powerapps/powerapps-get-started/index.yml
@@ -2,29 +2,39 @@
 uid: learn-bizapps.powerapps-get-started
 metadata:
   title: Erste Schritte mit PowerApps
-  description: 'Lernen Sie die Grundlagen von PowerApps kennen, und erfahren Sie, wie Sie das Tool in Ihrer Organisation einsetzen können.'
+  description: Lernen Sie die Grundlagen von PowerApps kennen, und erfahren Sie, wie Sie das Tool in Ihrer Organisation einsetzen können.
+  ms.openlocfilehash: e8b01abb4fbd40ea4bd3d1d44f8f4981236a85b8
+  ms.sourcegitcommit: d2e8b297a840d5958013d9a61963ce41c6b4ed22
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/06/2018
+  ms.locfileid: "43848543"
 title: Erste Schritte mit PowerApps
-summary: 'Lernen Sie die Grundlagen von PowerApps kennen, und erfahren Sie, wie Sie das Tool in Ihrer Organisation einsetzen können.'
-abstract: |
+summary: Lernen Sie die Grundlagen von PowerApps kennen, und erfahren Sie, wie Sie das Tool in Ihrer Organisation einsetzen können.
+abstract: >
   Aufgaben in diesem Modul:
+
   - Finden Sie heraus, wie PowerApps zur Effizienz Ihres Unternehmens beitragen kann.
+
   - Erfahren Sie, wie Sie verschiedene Technologien verwenden, um verschiedene Aufgaben in PowerApps zu erledigen.
+
   - Lernen Sie die verschiedenen Möglichkeiten zum Erstellen einer App in PowerApps kennen.
+
   - Erstellen Sie Ihre erste App aus Daten in einer Excel-Arbeitsmappe.
-cardDescription: 'Lernen Sie die Grundlagen von PowerApps kennen, und erfahren Sie, wie Sie das Tool in Ihrer Organisation einsetzen können.'
-iconUrl: 'http://via.placeholder.com/120x120'
+cardDescription: Lernen Sie die Grundlagen von PowerApps kennen, und erfahren Sie, wie Sie das Tool in Ihrer Organisation einsetzen können.
+iconUrl: http://via.placeholder.com/120x120
 levels:
-  - beginner
+- beginner
 roles:
-  - business-user
+- business-user
 products:
-  - bizapps-d365
-  - bizapps-power-apps
+- bizapps-d365
+- bizapps-power-apps
 units:
-  - learn-bizapps.powerapps-get-started.1-powerapps-introduction
-  - learn-bizapps.powerapps-get-started.2-powerapps-building-blocks
-  - learn-bizapps.powerapps-get-started.3-powerapps-related-technologies
-  - learn-bizapps.powerapps-get-started.4-powerapps-ways-to-build
-  - learn-bizapps.powerapps-get-started.5-powerapps-create-first
-  - learn-bizapps.powerapps-get-started.6-powerapps-quiz-get-started
+- learn-bizapps.powerapps-get-started.1-powerapps-introduction
+- learn-bizapps.powerapps-get-started.2-powerapps-building-blocks
+- learn-bizapps.powerapps-get-started.3-powerapps-related-technologies
+- learn-bizapps.powerapps-get-started.4-powerapps-ways-to-build
+- learn-bizapps.powerapps-get-started.5-powerapps-create-first
+- learn-bizapps.powerapps-get-started.6-powerapps-quiz-get-started
 achievement: learn.powerapps-get-started.badge
