--- a/learn-bizapps-pr/powerapps/powerapp-design-model-driven-apps/4-explore-sample-model-driven-apps.yml
+++ b/learn-bizapps-pr/powerapps/powerapp-design-model-driven-apps/4-explore-sample-model-driven-apps.yml
@@ -1,9 +1,14 @@
-### YamlMime:ModuleUnit 
+### YamlMime:ModuleUnit
 uid: learn-bizapps.powerapps-design-model-driven-apps.4-explore-sample-model-driven-apps
 title: Untersuchen von Beispielen modellgesteuerter Apps
 metadata:
   title: Untersuchen von Beispielen modellgesteuerter Apps
   description: Untersuchen von Beispielen modellgesteuerter Apps
+  ms.openlocfilehash: adb941c5a9f836e0096ee152aec00ced1ed8147e
+  ms.sourcegitcommit: 667c046355c7ad9495755fcee65e73d5fa279d50
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 08/31/2018
+  ms.locfileid: "43378219"
 durationInMinutes: 10
-content: |
-  [!include[](includes/4-explore-sample-model-driven-apps.md)]
+content: '[!include[](includes/4-explore-sample-model-driven-apps.md)]'
