--- a/learn-bizapps-pr/power-bi/build-your-first-report/6-summary-cleanup.yml
+++ b/learn-bizapps-pr/power-bi/build-your-first-report/6-summary-cleanup.yml
@@ -1,15 +1,15 @@
 ### YamlMime:ModuleUnit
-uid: learn.build-your-first-report.6-summary-cleanup
+uid: learn-bizapps.build-your-first-report.6-summary-cleanup
 metadata:
-  title: Zusammenfassung und Cleanup
-  description: Zusammenfassung und Cleanup
-  displayType: one-column
-  ms.openlocfilehash: 0a4055e1ee591be362eaa7ef2005fe17d778da9f
-  ms.sourcegitcommit: 61a4271dd1790759efa6eabe4c08c5d075effd85
-  ms.translationtype: HT
-  ms.contentlocale: de-DE
-  ms.lasthandoff: 09/06/2018
-  ms.locfileid: "43887120"
-title: Zusammenfassung und Cleanup
+  title: Summary and cleanup
+  description: Summary and cleanup
+  ms.date: 09/24/2018
+  #TODO: Update with real author name.
+  author: margoc
+  ms.author: margoc
+  ms.topic: interactive-tutorial
+  ms.prod: learning-powerbi
+title: Summary and cleanup
 durationInMinutes: 5
-content: '[!include[](includes/6-summary-cleanup.md)]'
+content: |
+ [!include[](includes/6-summary-cleanup.md)]
