commit translated contents

--- a/learn-bizapps-pr/achievements.yml
+++ b/learn-bizapps-pr/achievements.yml
@@ -2,98 +2,103 @@
 achievements:
 - uid: learn.automate-process-using-flow.trophy
   type: trophy
-  ## Note: Trophies are for learning paths.
-  title: Automate a business process using Flow Trophy
-  summary: Trophy for the 'Automate a business process using Flow' learning path.
+  title: Trophäe für das Automatisieren eines Unternehmensprozesses mithilfe von Flow
+  summary: Trophäe für den Lernpfad „Automatisieren eines Unternehmensprozesses mithilfe von Flow“
   iconUrl: http://via.placeholder.com/120x120
 - uid: learn.create-powerapps.trophy
   type: trophy
-  title: Create an app in PowerApps Trophy
-  summary: Trophy for the 'Create an app in PowerApps' learning path.
+  title: Trophäe für das Erstellen einer App in PowerApps
+  summary: Trophäe für den Lernpfad „Erstellen einer App in PowerApps“
   iconUrl: http://via.placeholder.com/120x120
 - uid: learn.customer-service-hub-cases-slas.trophy
   type: trophy
-  title: Work with cases and SLAs in Dynamics 365 for Customer Service
-  summary: Trophy for the 'Work with cases and SLAs in Dynamics 365 for Customer Service' learning path.
+  title: Arbeiten mit Fällen und SLAs in Dynamics 365 for Customer Service
+  summary: Trophäe für den Lernpfad „Arbeiten mit Fällen und SLAs in Dynamics 365 for Customer Service“
   iconUrl: http://via.placeholder.com/120x120
 - uid: learn.sample-module-bizapps.badge
   type: badge
-  ## Note: Badges are for modules.
-  title: Sample Module with CloudShell Badge
-  summary: Badge for the 'Sample Module with CloudShell' module.
+  title: Beispielmodul mit CloudShell-Abzeichen
+  summary: Abzeichen für das Modul „Beispielmodul mit CloudShell“
   iconUrl: http://via.placeholder.com/120x120
 - uid: learn.sample-module-dynamics.badge
   type: badge
-  title: Sample Module Dynamics Badge
-  summary: Badge for the 'Sample Module Dynamics' module.
+  title: Abzeichen für „Dynamics-Beispielmodul“
+  summary: Abzeichen für das Modul „Dynamics-Beispielmodul“
   iconUrl: http://via.placeholder.com/120x120
 - uid: learn.sample-module-power-apps.badge
   type: badge
-  title: Sample Module Power Apps Badge
-  summary: Badge for the 'Sample Module Power Apps' module.
+  title: Abzeichen für das PowerApps-Beispielmodul
+  summary: Abzeichen für das Modul „PowerApps-Beispielmodul“
   iconUrl: http://via.placeholder.com/120x120
 - uid: learn.sample-module-power-bi.badge
   type: badge
-  title: Sample Module Power BI Badge
-  summary: Badge for the 'Sample Module PowerBI' module.
+  title: Abzeichen für das Power BI-Beispielmodul
+  summary: Abzeichen für das Modul „Power BI-Beispielmodul“
   iconUrl: http://via.placeholder.com/120x120
 - uid: learn.customer-service-cases.badge
   type: badge
-  title: Customer Service Cases Badge
-  summary: Badge for the 'Customer Service Cases' module.
+  title: Abzeichen für Customer Service-Anfragen
+  summary: Abzeichen für das Modul „Customer Service-Anfragen“
   iconUrl: http://via.placeholder.com/120x120
 - uid: learn.customer-service-get-started.badge
   type: badge
-  title: Get started with Customer Service for Dynamics 365 Badge
-  summary: Badge for the 'Get started with Customer Service for Dynamics 365' module.
+  title: Abzeichen für „Erste Schritte mit Customer Service for Dynamics 365“
+  summary: Abzeichen für das Modul „Erste Schritte mit Customer Service for Dynamics 365“
   iconUrl: http://via.placeholder.com/120x120
 - uid: learn.powerapps-customize.badge
   type: badge
-  title: Customize and manage PowerApps Badge
-  summary: Badge for the 'Customize and manage PowerApps' module.
+  title: Abzeichen für das Anpassen und Verwalten von PowerApps
+  summary: Abzeichen für das Modul „Anpassen und Verwalten von PowerApps“
   iconUrl: http://via.placeholder.com/120x120
 - uid: learn.powerapps-get-started.badge
   type: badge
-  title: Get started with PowerApps Badge
-  summary: Badge for the 'Get started with PowerApps' module.
+  title: Abzeichen für „Erste Schritte mit PowerApps“
+  summary: Abzeichen für das Modul „Erste Schritte mit PowerApps“
   iconUrl: http://via.placeholder.com/120x120
 - uid: learn.powerapps-manage.badge
   type: badge
-  title: Manage your PowerApps Badge
-  summary: Badge for the 'Manage your PowerApps' module.
+  title: Abzeichen für das Verwalten von PowerApps
+  summary: Abzeichen für das Modul „Verwalten von PowerApps“
   iconUrl: http://via.placeholder.com/120x120
 - uid: learn.flow-create-approval.badge
   type: badge
-  title: Create an approval flow Badge
-  summary: Badge for the 'Create an approval flow' module.
+  title: Abzeichen für das Erstellen eines Genehmigungsflows
+  summary: Abzeichen für das Modul „Erstellen eines Genehmigungsflows“
   iconUrl: http://via.placeholder.com/120x120
-- uid: learn.flow-get-started.badge 
+- uid: learn.flow-get-started.badge
   type: badge
-  title: Get started with Microsoft Flow badge
-  summary: Badge for the 'Get started with Microsoft Flow' module.
+  title: Abzeichen „Erste Schritte mit Microsoft Flow“
+  summary: Abzeichen für das Modul „Erste Schritte mit Microsoft Flow“
   iconUrl: http://via.placeholder.com/120x120
-- uid: learn.build-your-first-report.badge 
+- uid: learn.build-your-first-report.badge
   type: badge
-  title: Create and share your first Power BI report
-  summary: Badge for the 'Create and share your first Power BI report' module.
+  title: Erstellen und Freigeben Ihres ersten Power BI-Berichts
+  summary: Abzeichen für das Modul „Erstellen und Freigeben Ihres ersten Power BI-Berichts“.
   iconUrl: http://via.placeholder.com/120x120
-- uid: learn.get-started-with-power-bi.badge 
+- uid: learn.get-started-with-power-bi.badge
   type: badge
-  title: Get started with Power BI badge
-  summary: Badge for the 'Get started with Power BI' module.
+  title: Abzeichen „Erste Schritte mit Power BI“
+  summary: Abzeichen für das Modul „Erste Schritte mit Power BI“
   iconUrl: http://via.placeholder.com/120x120
-- uid: learn.powerapps-design-model-driven-apps.badge 
+- uid: learn.powerapps-design-model-driven-apps.badge
   type: badge
-  title: Get started with model-driven apps
-  summary: Badge for the 'Get started with model-driven apps' module.
+  title: Erste Schritte mit modellgesteuerten Apps
+  summary: Abzeichen für das Modul „Erste Schritte mit modellgesteuerten PowerApps“
   iconUrl: http://via.placeholder.com/120x120
-- uid: learn.powerapps-business-process-flow.badge 
+- uid: learn.powerapps-business-process-flow.badge
   type: badge
-  title: Get started with business process flows
-  summary: Badge for the 'Get started with business process flows' module.
+  title: Erste Schritte mit Geschäftsprozessflows
+  summary: Abzeichen für das Modul „Erste Schritte mit Geschäftsprozessflows“
   iconUrl: http://via.placeholder.com/120x120
-- uid: learn.powerapps-common-data-service.badge 
+- uid: learn.powerapps-common-data-service.badge
   type: badge
-  title: Get started with the Common Data Service
-  summary: Badge for the 'Get started with the Common Data Service' module.
+  title: Erste Schritte mit dem Common Data Service
+  summary: Abzeichen für das Modul „Erste Schritte mit dem Common Data Service“
   iconUrl: http://via.placeholder.com/120x120
+metadata:
+  ms.openlocfilehash: baccc55e7f103cafa3b01b1b1d639ec53c253153
+  ms.sourcegitcommit: 61a4271dd1790759efa6eabe4c08c5d075effd85
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/06/2018
+  ms.locfileid: "43886785"
